Update and rename supermercato.html to index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     "sonyBravia.html",
                 ];
                 
-                let str = "<tr><th>Nome</th><th>Tipologia</th><th>Prezzo</th><th>Descrizione</th>><th>Quantit‡</th><th>Maggiori dettagli</th><th>Totale</th></tr>";
+                let str = "<tr><th>Nome</th><th>Tipologia</th><th>Prezzo</th><th>Descrizione</th>><th>Quantit√†</th><th>Maggiori dettagli</th><th>Totale</th></tr>";
                 
                 for(let i = 0; i < oggetto.magazzino.length; i++) {
                     const totale = oggetto.magazzino[i].guadagno * oggetto.magazzino[i].quantita;
