--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -19,16 +19,6 @@
         }
     </style>
 </head>
-<body>
-
-<h2>Prodotti Supermercato</h2>
-
-<table id="t1"></table>
-<input id="b2" type="text" placeholder="Cerca prodotto"> 
-
-<input id="b1" type="button" onclick="LetturaFile();" value="Stampa Tabella Prodotti"> 
-<br> 
-
 <script>
     function LetturaFile() {
         let xhr = new XMLHttpRequest();
@@ -71,6 +61,18 @@
         xhr.send();
     }
 </script>
+
+<body>
+
+<h2>Prodotti Supermercato</h2>
+
+<table id="t1"></table>
+<input id="b2" type="text" placeholder="Cerca prodotto"> 
+
+<input id="b1" type="button" onclick="LetturaFile();" value="Stampa Tabella Prodotti"> 
+<br> 
+
+
 
 </body>
 </html>
